--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,25 @@
 2009-04-11  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Move bounds/scales from Function to Problem.
+	* include/liboptimization/function.hh: Move bounds/scales to...
+	* include/liboptimization/problem.hh,
+	* include/liboptimization/problem.hxx: ...here.
+	* src/cfsqp.cc: Fix bridge.
+	* src/derivable-function.cc: Fix print
+	* src/function.cc: Move bounds/scales implementation.
+	* src/ipopt.cc: Fix bridge.
+	* src/linear-function.cc,
+	* src/quadratic-function.cc,
+	* src/twice-derivable-function.cc: Fix print.
+	* tests/cfsqp.cc: Use initialize_problem.
+	* tests/cfsqp.stdout: Update test suite.
+	* tests/hs071.hh: Factorize code in initialize_problem.
+	* tests/ipopt.cc: Use initialize_problem.
+	* tests/ipopt.stdout,
+	* tests/simple-test.stdout: Update test suite.
+
+2009-04-11  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Detect infinity value automatically.
 	* include/liboptimization/derivable-function.hh: Fix constructor.
 	* include/liboptimization/function.hh: Make infinity a static
