--- a/README
+++ b/README
@@ -28,3 +28,12 @@ $ make doc
 
 To view the HTML documentation: go in the ``doc/html'' directory and open the
 ``index.html'' file with your favorite internet browser.
+
+
+* How to use Valgrind with the test suite?
+
+All the tests launched by the test suite can be prefixed
+with the environment variable ``CHECK_PREFIX''.
+
+$ export CHECK_PREFIX='valgrind --log-file=valgrind.log'
+$ make check
