--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,46 @@
 2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add m in Function (represents the result's size).
+	* include/Makefile.am: Distribute new headers.
+	* include/liboptimization/derivable-function.hh:
+        Add m to constructor.
+	* include/liboptimization/function.hh: Add m, the
+        size of the result, change operator () signature.
+	* include/liboptimization/generic-solver.hh: Fix includes.
+	* include/liboptimization/linear-function.hh: Add m to
+        constructor.
+	* include/liboptimization/numeric-linear-function.hh: Set
+        m to 1.
+	* include/liboptimization/numeric-quadratic-function.hh: Set
+        m to 1.
+	* include/liboptimization/quadratic-function.hh: Add m to
+        constructor.
+	* include/liboptimization/result-with-warnings.hh: Split result.hh.
+	* include/liboptimization/result.hh: Split result.hh.
+	* include/liboptimization/twice-derivable-function.hh: Add m
+        to constructor.
+	* src/cfsqp.cc: Fix bridge to handle m (only care
+        about first value of the result for now).
+	* src/derivable-function.cc: Add m to constructor.
+	* src/function.cc: Add m to constructor.
+	* src/ipopt.cc: Fix bridge to handle m (only care
+        about first value of the result for now).
+	* src/linear-function.cc: Add m to constructor.
+	* src/numeric-linear-function.cc: Add m to constructor.
+	* src/numeric-quadratic-function.cc: Add m to constructor.
+	* src/quadratic-function.cc: Add m to constructor.
+	* src/result-with-warnings.cc: Split result.cc.
+	* src/result.cc: Split result.cc.
+	* src/twice-derivable-function.cc: Add m to constructor.
+	* tests/hs071.hh: Fix to set m to one everywhere.
+	* tests/ipopt.stdout,
+	* tests/numeric-linear-function.stdout,
+	* tests/numeric-quadratic-function.stdout: Update reference.
+	* tests/problem-cc.cc,
+	* tests/simple-test.cc: Set m to one in examples.
+
+2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Handle results with/without warnings.
 	* include/liboptimization/fwd.hh: Predeclare new classes.
 	* include/liboptimization/generic-solver.hh: result_t
