--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,106 @@
 2009-04-16  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Change project's name.
+	* README,
+	* build-aux/autotest.at,
+	* build-aux/autotest.mk,
+	* build-aux/cfsqp.m4,
+	* build-aux/ipopt.m4,
+	* configure.ac,
+	* doc/Makefile.am,
+	* doc/aist-upload.sh.in,
+	* include/Makefile.am: Change project's name.
+	* include/roboptim-core/cfsqp.hh:
+        Rename from include/liboptimization/cfsqp.hh.
+	* include/roboptim-core/derivable-function.hh:
+        Rename from include/liboptimization/derivable-function.hh.
+	* include/roboptim-core/dummy.hh:
+        Rename from include/liboptimization/dummy.hh.
+	* include/roboptim-core/function.hh:
+        Rename from include/liboptimization/function.hh.
+	* include/roboptim-core/fwd.hh:
+        Rename from include/liboptimization/fwd.hh.
+	* include/roboptim-core/generic-solver.hh:
+        Rename from include/liboptimization/generic-solver.hh.
+	* include/roboptim-core/indent.hh:
+        Rename from include/liboptimization/indent.hh.
+	* include/roboptim-core/ipopt.hh:
+        Rename from include/liboptimization/ipopt.hh.
+	* include/roboptim-core/linear-function.hh:
+        Rename from include/liboptimization/linear-function.hh.
+	* include/roboptim-core/numeric-linear-function.hh:
+        Rename from include/liboptimization/numeric-linear-function.hh.
+	* include/roboptim-core/numeric-quadratic-function.hh:
+        Rename from include/liboptimization/numeric-quadratic-function.hh.
+	* include/roboptim-core/problem.hh:
+        Rename from include/liboptimization/problem.hh.
+	* include/roboptim-core/problem.hxx:
+        Rename from include/liboptimization/problem.hxx.
+	* include/roboptim-core/quadratic-function.hh:
+        Rename from include/liboptimization/quadratic-function.hh.
+	* include/roboptim-core/result-with-warnings.hh:
+        Rename from include/liboptimization/result-with-warnings.hh.
+	* include/roboptim-core/result.hh:
+        Rename from include/liboptimization/result.hh.
+	* include/roboptim-core/solver-error.hh:
+        Rename from include/liboptimization/solver-error.hh.
+	* include/roboptim-core/solver-warning.hh:
+        Rename from include/liboptimization/solver-warning.hh.
+	* include/roboptim-core/solver.hh:
+        Rename from include/liboptimization/solver.hh.
+	* include/roboptim-core/solver.hxx:
+        Rename from include/liboptimization/solver.hxx.
+	* include/roboptim-core/twice-derivable-function.hh:
+        Rename from include/liboptimization/twice-derivable-function.hh.
+	* include/roboptim-core/util.hh:
+        Rename from include/liboptimization/util.hh.
+	* include/roboptim-core/util.hxx:
+        Rename from include/liboptimization/util.hxx.
+	* packages/debian/changelog,
+	* packages/debian/control,
+	* packages/ebuild/ChangeLog: Change project's name.
+	* packages/ebuild/roboptim-core-0.1.ebuild:
+        Rename from packages/ebuild/liboptimization-0.1.ebuild.
+	* packages/ebuild/roboptim-core-9999.ebuild:
+        Rename from packages/ebuild/liboptimization-9999.ebuild.
+	* packages/rpm/ChangeLog: Change project's name.
+	* packages/rpm/roboptim-core.spec:
+        Rename from packages/rpm/liboptimization.spec.
+	* roboptim-core.m4:
+        Rename from liboptimization.m4.
+	* src/Makefile.am,
+	* src/cfsqp.cc,
+	* src/derivable-function.cc,
+	* src/doc.hh,
+	* src/dummy.cc,
+	* src/function.cc,
+	* src/generic-solver.cc,
+	* src/indent.cc,
+	* src/ipopt.cc,
+	* src/linear-function.cc,
+	* src/numeric-linear-function.cc,
+	* src/numeric-quadratic-function.cc,
+	* src/quadratic-function.cc,
+	* src/result-with-warnings.cc,
+	* src/result.cc,
+	* src/solver-error.cc,
+	* src/solver-warning.cc,
+	* src/twice-derivable-function.cc,
+	* src/util.cc,
+	* tests/Makefile.am,
+	* tests/cfsqp.cc,
+	* tests/common.hh,
+	* tests/hs071.hh,
+	* tests/ipopt.cc,
+	* tests/numeric-linear-function.cc,
+	* tests/numeric-quadratic-function.cc,
+	* tests/package.m4.in,
+	* tests/problem-cc.cc,
+	* tests/simple.cc,
+	* tests/testsuite.at: Change project's name.
+
+2009-04-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Document libraries design and how to add a new solver.
 	* src/doc.hh: Here.
 
