--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 * Why configure does not detect CFSQP?
 
 CFSQP is always distributed as a C header and source file.  As a result, you
-will have to build yourself a library to use CFSQP with liboptimization.
+will have to build yourself a library to use CFSQP with roboptim.
 
 Copy cfsqp.c qld.c and cfsqpusr.h in a directory and type:
 $ g++ cfsqp.c qld.c -shared -fPIC -o libcfsqp.so
@@ -11,7 +11,7 @@ $ g++ cfsqp.c qld.c -shared -fPIC -o libcfsqp.so
 Then, make sure that gcc search for headers/libraries in this directory. For
 instance, you can call configure with additional parameters:
 
-$ cd liboptimization
+$ cd roboptim-core
 $ mkdir _build && cd _build
 $ ../configure CPPFLAGS=-I/path/to/cfsqp LDFLAGS=-L/path/to/cfsqp
 
