--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-19  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Distribute build-aux/bootstrap.
+	* Makefile.am: Here.
+
 2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix Gentoo ebuild for release 0.1.
