--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-24  Florent Lamiraux  <florent@laas.fr>
+
+	Define modules in documentation.
+
 2009-04-22  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix typo in test suite.
