--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-04-28  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix various mistakes in deb package generation.
+	* THANKS: New.
+	* build-aux/deb.mk: Add clean rule, split deb rule.
+	* packages/debian/ChangeLog,
+	* packages/debian/changelog,
+	* packages/debian/control,
+	* packages/debian/rules: Fix various errors.
+
 2009-04-24  Florent Lamiraux  <florent@laas.fr>
 
 	Remove auto-inclusion.
