--- a/packages/debian/ChangeLog
+++ b/packages/debian/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-28  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	* control: Add Boost dependency and more meta information. 
+
 2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	* changelog,
