Fix caracter class complement in boost.m4
Replaced the bash-specific `^' construct with a standard `!'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-28  Anthony Mallet  <anthony.mallet@laas.fr>
+
+        Fix caracter class complement in boost.m4 by replacing the
+        bash-specific `^' construct with a standard `!'.
+
 2009-04-28  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Debian needs a changelog with no tabs.
