--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,10 @@
+roboptim-core (0.1-3) unstable; urgency=low
+
+  * Fix Boost dependency.
+
+ -- Thomas Moulard <thomas.moulard@gmail.com>  Wed, 29 Apr 2009 09:28:12 +0900
+
+
 roboptim-core (0.1-2) unstable; urgency=low
 
   * Add missing files.
