--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Update NEWS.
+	* NEWS: Here.
+
+2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Update version number to 0.2.
 	* configure.ac: Increment version number.
 	* src/Makefile.am: Update version-info.
